Change icons, now including a dark theme

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -13,7 +13,10 @@
 Version 2.0, January 2004<br>
 http://www.apache.org/licenses/</center>
 <p>
-      <div>Icons made by <a href="https://www.flaticon.com/authors/ocha" title="OCHA">OCHA</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+      <div>
+      Icons made by <a href="https://pixabay.com/en/death-skull-bones-skeleton-2026923/" title="OpenClipart-Vectors">OpenClipart-Vectors</a>
+      from <a href="https://pixabay.com/" title="Flaticon">pixabay.com</a>
+      is licensed by <a href="https://creativecommons.org/publicdomain/zero/1.0/deed.en" title="CC0 Creative Commons" target="_blank">CC0 Creative Commons</a></div>
     ]]></description>
 
     <change-notes><![CDATA[
